generator/tests/snapshots/snapshot_tests__function__create_bar.snap
---
source: generator/tests/snapshot_tests.rs
expression: output
---
import type { EnvConfig } from '../../_envs'
import { getPublishedAt } from '../../_envs'
import { pure } from '../../_framework/util'
import { Transaction, TransactionArgument, TransactionResult } from '@mysten/sui/transactions'

export function createBar(tx: Transaction, value: bigint | TransactionArgument, options?: { env?: EnvConfig }): TransactionResult {
  return tx.moveCall({
    target: `${getPublishedAt('examples', options?.env)}::fixture::create_bar`,
    arguments: [pure(tx, value, `u64`)],
  })
}
