generator/tests/snapshots/snapshot_tests__function__create_with_generic_field.snap
---
source: generator/tests/snapshot_tests.rs
expression: output
---
import type { EnvConfig } from '../../_envs'
import { getPublishedAt } from '../../_envs'
import { GenericArg, generic } from '../../_framework/util'
import { Transaction, TransactionArgument, TransactionResult } from '@mysten/sui/transactions'

export function createWithGenericField(tx: Transaction, typeArg: string, genericField: GenericArg, options?: { env?: EnvConfig }): TransactionResult {
  return tx.moveCall({
    target: `${getPublishedAt('examples', options?.env)}::fixture::create_with_generic_field`,
    typeArguments: [typeArg],
    arguments: [generic(tx, `${typeArg}`, genericField)],
  })
}
