generator/tests/snapshots/snapshot_tests__function__create_with_two_generics.snap
---
source: generator/tests/snapshot_tests.rs
expression: output
---
import type { EnvConfig } from '../../_envs'
import { getPublishedAt } from '../../_envs'
import { GenericArg, generic } from '../../_framework/util'
import { Transaction, TransactionArgument, TransactionResult } from '@mysten/sui/transactions'

export interface CreateWithTwoGenericsArgs {
  genericField1: GenericArg
  genericField2: GenericArg
}

export function createWithTwoGenerics(tx: Transaction, typeArgs: [string, string], args: CreateWithTwoGenericsArgs, options?: { env?: EnvConfig }): TransactionResult {
  return tx.moveCall({
    target: `${getPublishedAt('examples', options?.env)}::fixture::create_with_two_generics`,
    typeArguments: typeArgs,
    arguments: [
      generic(tx, `${typeArgs[0]}`, args.genericField1),
      generic(tx, `${typeArgs[1]}`, args.genericField2),
    ],
  })
}
