generator/tests/snapshots/snapshot_tests__function__deprecated.snap
---
source: generator/tests/snapshot_tests.rs
expression: output
---
import type { EnvConfig } from '../../_envs'
import { getPublishedAt } from '../../_envs'
import { pure } from '../../_framework/util'
import { Transaction, TransactionArgument, TransactionResult } from '@mysten/sui/transactions'

/**
 * This function is deprecated
 *
 * @deprecated
 */
export function deprecatedSimple(tx: Transaction, options?: { env?: EnvConfig }): TransactionResult {
  return tx.moveCall({
    target: `${getPublishedAt('examples', options?.env)}::fixture::deprecated_simple`,
    arguments: [],
  })
}

/**
 * This function will be removed soon
 *
 * @deprecated Use `new_function` instead
 */
export function deprecatedWithNote(tx: Transaction, value: bigint | TransactionArgument, options?: { env?: EnvConfig }): TransactionResult {
  return tx.moveCall({
    target: `${getPublishedAt('examples', options?.env)}::fixture::deprecated_with_note`,
    arguments: [pure(tx, value, `u64`)],
  })
}

export interface DeprecatedWithArgsArgs {
  x: bigint | TransactionArgument
  y: bigint | TransactionArgument
  z: bigint | TransactionArgument
}

/**
 * This function has multiple parameters and is deprecated.
 *
 * It will be removed in the next version.
 *
 * @deprecated Use `new_function_with_args` instead
 */
export function deprecatedWithArgs(tx: Transaction, args: DeprecatedWithArgsArgs, options?: { env?: EnvConfig }): TransactionResult {
  return tx.moveCall({
    target: `${getPublishedAt('examples', options?.env)}::fixture::deprecated_with_args`,
    arguments: [
      pure(tx, args.x, `u64`),
      pure(tx, args.y, `u64`),
      pure(tx, args.z, `u64`),
    ],
  })
}
